apps/subsystems/coder/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
